--- a/requirements.txt
+++ b/requirements.txt
@@ -1,55 +1,56 @@
-aiohappyeyeballs==2.4.8
-aiohttp==3.11.13
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.18
 aiosignal==1.3.2
 annotated-types==0.7.0
-anyio==4.8.0
+anyio==4.9.0
 async-timeout==4.0.3
-attrs==25.1.0
-beautifulsoup4==4.13.3
-bs4==0.0.2
-certifi==2025.1.31
+attrs==25.3.0
+beautifulsoup4==4.13.4
+build==1.2.2.post1
+certifi==2025.4.26
 chardet==5.2.0
-charset-normalizer==3.4.1
+charset-normalizer==3.4.2
 click==8.1.8
 colorama==0.4.6
 cssselect==1.3.0
 dataclasses-json==0.6.7
-duckduckgo_search==7.5.2
+duckduckgo_search==8.0.1
 exceptiongroup==1.2.2
-frozenlist==1.5.0
-greenlet==3.1.1
+frozenlist==1.6.0
+greenlet==3.2.1
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
 httpx-sse==0.4.0
 idna==3.10
-joblib==1.4.2
+joblib==1.5.0
 jsonpatch==1.33
 jsonpointer==3.0.0
-langchain==0.3.20
-langchain-community==0.3.19
-langchain-core==0.3.41
-langchain-ollama==0.2.3
-langchain-text-splitters==0.3.6
-langsmith==0.3.11
-lxml==5.3.1
+langchain==0.3.25
+langchain-community==0.3.23
+langchain-core==0.3.59
+langchain-ollama==0.3.2
+langchain-text-splitters==0.3.8
+langsmith==0.3.42
+lxml==5.4.0
 lxml_html_clean==0.4.2
 markdownify==1.1.0
 marshmallow==3.26.1
-multidict==6.1.0
-mypy-extensions==1.0.0
-numpy==2.2.3
-ollama==0.4.7
-orjson==3.10.15
+multidict==6.4.3
+mypy_extensions==1.1.0
+numpy==2.2.5
+ollama==0.4.8
+orjson==3.10.18
 packaging==24.2
-primp==0.14.0
-propcache==0.3.0
-pydantic==2.10.6
-pydantic-settings==2.8.1
-pydantic_core==2.27.2
-python-dotenv==1.0.1
+primp==0.15.0
+propcache==0.3.1
+pydantic==2.11.4
+pydantic-settings==2.9.1
+pydantic_core==2.33.2
+pyproject_hooks==1.2.0
+python-dotenv==1.1.0
 PyYAML==6.0.2
-readability-lxml==0.8.4
+readability-lxml==0.8.4.1
 regex==2024.11.6
 requests==2.32.3
 requests-toolbelt==1.0.0
@@ -57,13 +58,15 @@ scikit-learn==1.6.1
 scipy==1.15.2
 six==1.17.0
 sniffio==1.3.1
-soupsieve==2.6
-SQLAlchemy==2.0.38
-tenacity==9.0.0
-threadpoolctl==3.5.0
+soupsieve==2.7
+SQLAlchemy==2.0.40
+tenacity==9.1.2
+threadpoolctl==3.6.0
 tiktoken==0.9.0
+tomli==2.2.1
 typing-inspect==0.9.0
-typing_extensions==4.12.2
-urllib3==2.3.0
-yarl==1.18.3
+typing-inspection==0.4.0
+typing_extensions==4.13.2
+urllib3==2.4.0
+yarl==1.20.0
 zstandard==0.23.0
