--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ click==8.1.8
 colorama==0.4.6
 cssselect==1.3.0
 dataclasses-json==0.6.7
-duckduckgo_search==8.0.1
+ddgs==9.5.2
 exceptiongroup==1.2.2
 frozenlist==1.6.0
 greenlet==3.2.1
@@ -39,7 +39,7 @@ marshmallow==3.26.1
 multidict==6.4.3
 mypy_extensions==1.1.0
 numpy==2.2.5
-ollama==0.4.8
+ollama==0.5.2
 orjson==3.10.18
 packaging==24.2
 primp==0.15.0
